web/assets/css/main.css
/* ... */
	.align-left {
		text-align: left;
	}

	.align-center {
		text-align: center;
	}

	.align-right {
		text-align: right;
	}

	#message {
		resize: vertical;
	}

/* Modal */

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.4);
}

.modal-content {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #fefefe;
    padding: 1.5em;
    border: 1px solid #888;
    width: 50%;
    max-width: 400px; /* adjust as needed */
    border-radius: .5em;
    text-align: center;
    color: #787878;
}

.close {
    position: absolute;
    top: .25em;
    right: .5em;
    color: #aaaaaa;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

/* Navbar */

  @media screen and (min-width: 981px) {
	#navbar {
		background-color: #fff;
		position: fixed;
		top: 0;
		right: 0;
		width: 65%;
		overflow: hidden;
		z-index: 1;
		border-bottom: solid 3px #efefef;
	  }
	  
	#navbar nav {
		display: flex;
		justify-content: space-around; /* distribute the items evenly with equal space around them */
		width: 100%; /* make the nav element take up the full width of the navbar */
	}

	#navbar #links {
		display: flex;
		justify-content: space-around; /* distribute the items evenly with equal space around them */
		width: 100%;
	}
	
	#navbar a {
		display: block;
		color: #787878;
		cursor: pointer;
		text-align: center;
		padding: .5em .5em;
		text-decoration: none;
		border-bottom: none;
		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
	}

	#navbar a:hover {
		background-color: #ddd;
		color: #49bf9d;
	  }

	#navbar .icon {
		display: none;
	}
  }

  @media screen and (min-width: 737px) and (max-width: 980px){
	#navbar {
		background-color: #fff;
		position: fixed;
		top: 0;
		right: 0;
		width: 100%;
		overflow: hidden;
		z-index: 1;
		border-bottom: solid 3px #efefef;
	  }
	  
	#navbar nav {
		display: flex;
		justify-content: space-around; /* distribute the items evenly with equal space around them */
		width: 100%; /* make the nav element take up the full width of the navbar */
	}

	#navbar #links {
		display: flex;
		justify-content: space-around; /* distribute the items evenly with equal space around them */
		width: 100%;
	}
	
	#navbar a {
		display: block;
		color: #787878;
		cursor: pointer;
		text-align: center;
		padding: .5em .5em;
		text-decoration: none;
		border-bottom: none;
		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
	}

	#navbar a:hover {
		background-color: #ddd;
		color: #49bf9d;
	  }

	#navbar .icon {
		display: none;
	}
  }

  @media screen and (max-width: 736px) {
  
	#navbar {
		background-color: transparent;
		position: fixed;
		top: 0;
		right: 0;
		width: 100%;
		overflow: hidden;
		z-index: 1;
	}

	#iconborder {
		display: flex;
		float: right;
		justify-content: center;
    	align-items: center;
		border-bottom: solid 3px #cccccc;
		border-left: solid 3px #cccccc;
		border-bottom-left-radius: 1em;
		overflow: hidden;
		width: 3em;
		cursor: pointer;
		transition: width 0.25s ease-in-out;
	}
	
	#iconcolor {
		display: flex;
    	justify-content: center;
    	align-items: center;
		background-color: #fff;
		width: 100%
	}

	#navbar .icon {
	  display: block;
	  color: #bbbbbb;
	}

	#navbar #iconborder:hover .icon {
		color: #49bf9d;
	}

	#navbar #iconborder.active {
		width: 10em;
		border-bottom-left-radius: 0;
		transition: width 0.25s ease-in-out;
	}

	#navbar .icon::before {
		font-size: 1em;
	}

	#nav {
		display: flex;
		flex-direction: column;
		align-items: flex-end;
	}

	#links a{
		opacity: 0;
		visibility: hidden;
	}

	@keyframes slideIn {
		from {
			opacity: 0;
			visibility: hidden;
			transform: translateY(-1em);
		}
		to {
			opacity: 1;
			visibility: visible;
			transform: translateY(0);
		}
	}
	
	#links.animate-in a:nth-child(1) {
		animation-delay: 0.1s;
	}
	
	#links.animate-in a:nth-child(2) {
		animation-delay: 0.15s;
	}
	
	#links.animate-in a:nth-child(3) {
		animation-delay: 0.2s;
	}
	
	#links.animate-in a:nth-child(4) {
		animation-delay: 0.25s;
	}
	
	#links.animate-in a {
		animation: slideIn 0.3s ease forwards;
	}

	#links a {
		display: block;
		color: #aaaaaa;
		cursor: pointer;
		text-align: center;
		text-decoration: none;
		border-bottom: solid 1px #cccccc;
		background-color: #fff;
		border-left: solid 3px #cccccc; 
		width: 10em;
		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
	}

	#links a:last-of-type {
		border-bottom: solid 3px #cccccc;
		border-bottom-left-radius: 1em;
	}

	#links a:hover {
		background-color: #ddd;
		color: #49bf9d;
	  }
	
  }
/* ... */

